this is the hardest thing ive had to do in my life, and almost done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
     margin:0 auto;
     width:400px;
     text-align: center;
+    height: 100vh;
 }
 
 /* .wrapWithBackgroundImage {
@@ -21,5 +22,9 @@ body {
     color: white;
     font-family: 'Anton', sans-serif;
     font: bold;
-    padding-left: 40px;
+    margin-left: 40px;
+}
+
+.picture {
+    width: 100%;
 }
